--- a/index.html
+++ b/index.html
@@ -21,9 +21,29 @@
 <body>
     <script>
         const rocks = [
-            "rock.jpg",
-            "cock.jpg",
-            "booba.png"
+            "aock.png",
+            "bock.jpg",
+            "cock.png",
+            "dock.png",
+            "eock.png",
+            "fock.jpg",
+            "gock.jpg",
+            "hock.jpg",
+            "iock.jpg",
+            "hock.jpg",
+            "kock.png",
+            "lock.png",
+            "mock.png",
+            "nock.png",
+            "oock.png",
+            "pock.png",
+            "qock.png",
+            "rock.png",
+            "sock.png",
+            "tock.png",
+            "uock.png",
+            "vock.png",
+            "wock.png",
         ]
         const img = document.createElement("img");
         img.src = "rocks/" + rocks[Math.floor(Math.random()*rocks.length)]
