--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>twink bar</title>
+    <link rel='icon' href='rocks/qock.png' type='image/png'/ >
     <style>
         img {
             height: 100vh;
@@ -44,6 +45,13 @@
             "uock.png",
             "vock.png",
             "wock.png",
+            "xock.jpg",
+            "yock.jpg",
+            "zock.jpg",
+            "0ock.png",
+            "1ock.png",
+            "2ock.jpg",
+            "3ock.jpg"
         ]
         const img = document.createElement("img");
         img.src = "rocks/" + rocks[Math.floor(Math.random()*rocks.length)]
