--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-color:black;
             overflow: hidden;
             text-align: center;
+            margin: 0
         }
     </style>
 </head>
